docs: absorb PMC v4 tail-end refinements (V1.1 P0 sign-off bar met)
Five minor refinements absorbed:

- BosPutRateProbe execution-safety section: isolated prefix
  enforcement, mandatory cleanup, region/tier non-portability,
  maintenance-window gate, cluster-wide HA lock. Prevents the
  first operator from accidentally SLO-burning a production
  bucket.

- MB-tier 24h threshold aligned with Flink's 60s metric reporter
  cadence: explicit Prometheus alert rule "P90 over 24h sliding
  window < 50% sustained for >= 6 consecutive hours" -> warning;
  >= 24h sustained -> critical incident -> escalate to V1.2 B-4d.

- B-5 shared-* modes gain applicability boundaries: Flink HA
  backend required (else auto-fall-back to per-job); per-job
  ceiling 50% of bucket budget; cross-job sync-latency gauge
  (auto-fall-back if > 500ms sustained 5min); production posture
  recommends bucket-per-job isolation.

- Senior reviewer 1.5 days upgraded from request to hard resource
  constraint: sprint-planning checklist names reviewer for B-5 +
  B-2 merges; calendar holds reserved; implementation kicks off
  only after reviewer confirmations land. Last-minute scheduling
  has caused 3-5 day landing delays on this project historically.

- A-1-preflight gains expected-output decision tree: PASS (ship
  globally) | PARTIAL-FAIL (opt-in flag) | HARD-FAIL (do not
  ship). Raw-data archive path under
  docs/superpowers/bench-archive/. Commit-doc template with
  per-query speedup table + decision line.

Sign-off note: V1.1 P0 plan is comprehensively ready. Q8/Q9/Q17
gate uncertainty is documented product boundary (MB tag +
hit-rate metric + 6h/24h Prometheus rule + escalation path to
B-4d), not hidden risk.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>